k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tars
  labels:
    app.kubernetes.io/name: tars
    app.kubernetes.io/version: "0.3.0-alpha"
    app.kubernetes.io/component: namespace
