k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: tars
  labels:
    app.kubernetes.io/name: tars
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
